please just work

--- a/performance/2017_06_performance_basics/notebooks/MatrixMultiplication.ipynb
+++ b/performance/2017_06_performance_basics/notebooks/MatrixMultiplication.ipynb
@@ -21,7 +21,7 @@
     "%matplotlib inline\n",
     "\n",
     "import seaborn as sns; sns.set()\n",
-    "plt.rcParams[\"figure.figsize\"] = (16,8)"
+    "plt.rcParams[\"figure.figsize\"] = (16, 8)"
    ]
   },
   {
